--- a/templates/views/add_event.hbs
+++ b/templates/views/add_event.hbs
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
-{{!--
-
 <head>
     <title>ECESS-Admin</title>
-</head> --}}
+</head>
 {{>header}}
 
 <body>
 
+    <div class='alert '+{{status}}>
+        <strong>Success!</strong> {{message}}
+    </div>
     <div class="container">
         <h1 style="color: crimson; text-decoration: underline; text-align:center;">Only for ECESS-Admin</h1>
 
