--- a/templates/partials/events.hbs
+++ b/templates/partials/events.hbs
@@ -8,14 +8,14 @@
             {{!-- style="border-left: 25px solid red;" --}}
             <div class="row" >
                 <div class="col-4 card-header head" style="background-color: var(--secondary);">
-                    25-Jun-2021
+                    28-Jun-2021
                 </div>
                 <div class="col-8" style="padding-right: 5px; padding-left: 5px; background-color: var(--primary);">
                     <div class="card-header" id="headingOne">
                         <h5 class="mb-0">
                             <button class="btn btn-link collapsed head" data-toggle="collapse"
                                 data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                Heading 1
+                                Freshers meet
                             </button>
                         </h5>
                     </div>
@@ -41,14 +41,14 @@
         <div class="card">
             <div class="row">
                 <div class="col-4 card-header head" style="background-color: var(--secondary);">
-                    30-Jun-2021
+                    dd-mm-yyyy
                 </div>
                 <div class="col-8" style="padding-right: 5px; padding-left: 5px; background-color:  var(--primary);">
                     <div class="card-header" id="headingTwo">
                         <h5 class="mb-0">
                             <button class="btn btn-link collapsed head" data-toggle="collapse"
                                 data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                Collapsible Group Item #2
+                                Upcoming events
                             </button>
                         </h5>
                     </div>
@@ -56,31 +56,21 @@
             </div>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <div class="card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
-                    3
-                    wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt
-                    laborum
-                    eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee
-                    nulla
-                    assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
-                    nesciunt
-                    sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                    farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
-                    labore sustainable VHS.
+                    comming soon.............
                 </div>
 
             </div>
             <div class="card">
                 <div class="row">
                     <div class="col-4 card-header head" style="background-color: var(--secondary);">
-                        30-Jul-2021
+                        dd-mm-yyyy
                     </div>
                     <div class="col-8" style="padding-right: 5px; padding-left: 5px; background-color: var(--primary);">
                         <div class="card-header" id="headingThree">
                             <h5 class="mb-0">
                                 <button class="btn btn-link collapsed head" data-toggle="collapse"
                                     data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    Collapsible Group Item #3
+                                    Upcoming events
                                 </button>
                             </h5>
                         </div>
@@ -88,17 +78,7 @@
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                     <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
-                        3
-                        wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt
-                        laborum
-                        eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee
-                        nulla
-                        assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
-                        nesciunt
-                        sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                        farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
-                        labore sustainable VHS.
+                        comming soon.............
                     </div>
                 </div>
             </div>
