--- a/templates/partials/members.hbs
+++ b/templates/partials/members.hbs
@@ -14,7 +14,7 @@
         {{!-- in place of svg we use img tag --}}
         <img src="/membersProfile/pawan.jpeg" alt="Pawan" class="profile">
 
-        <h4 style="font-weight=" bold";">PRESIDENT</h4>
+        <h4 style="font-weight="heavy,extra-bold";">PRESIDENT</h4>
         <p>Pavan Dharimireddy</p>
         <div class="social-icons">
 
@@ -25,8 +25,8 @@
                 <i class="fa fa-linkedin-square linkedIn"></i>
             </a>
             {{!-- Email -- pavandharimireddy.999@gmail.com --}}
-            <a href="/" target="_blank">
-                <i class="fab fa-facebook facebook"></i>
+            <a href="mailto:pavandharimireddy.999@gmail.com" target="_blank">
+                <i class= "fa fa-google facebook"></i>
             </a>
         </div>
     </div><!-- /.col-lg-4 -->
@@ -44,7 +44,7 @@
         <img src="/membersProfile/achyuth.jpeg" alt="Achyuth" class="profile">
 
 
-        <h4 style=" font-weight=" bold";">VICE PRESIDENT</h4>
+        <h4 style=" font-weight="heavy,extra-bold";">VICE PRESIDENT</h4>
         <p>Bhavanam Achyuth Reddy</p>
         <div class="social-icons">
 
@@ -56,8 +56,8 @@
             </a>
 
             {{!-- EMAIL : bhavanamachyuthreddy@gmail.com --}}
-            <a href="/" target="_blank">
-                <i class="fab fa-facebook facebook"></i>
+            <a href="mailto:bhavanamachyuthreddy@gmail.com" target="_blank">
+                <i class="fab fa-google facebook"></i>
             </a>
         </div>
     </div><!-- /.col-lg-4 -->
@@ -74,7 +74,7 @@
         <img src="/membersProfile/shashank.jpeg" alt="Shashank" class="profile">
 
 
-        <h4 style=" font-weight=" bold";">TREASURER</h4>
+        <h4 style=" font-weight="heavy,extra-bold";">TREASURER</h4>
         <p>Shashank Chauhan</p>
         <div class="social-icons">
 
@@ -85,8 +85,8 @@
                 <i class="fa fa-linkedin-square linkedIn"></i>
             </a>
             {{!-- Email---->shashankchauhan12345@gmail.com --}}
-            <a href="/" target="_blank">
-                <i class="fab fa-facebook facebook"></i>
+            <a href="mailto:shashankchauhan12345@gmail.com" target="_blank">
+                <i class="fab fa-google facebook"></i>
             </a>
         </div>
     </div><!-- /.col-lg-4 -->
@@ -103,7 +103,7 @@
         <img src="/membersProfile/aditya.jpeg" alt="Aditya" class="profile">
 
 
-        <h4 style=" font-weight=" bold";">WEB MASTER</h4>
+        <h4 style=" font-weight="heavy,extra-bold";">WEB MASTER</h4>
         <p>Aditya Kumar Gupta</p>
         <div class="social-icons">
 
@@ -114,8 +114,8 @@
                 <i class="fa fa-linkedin-square linkedIn"></i>
             </a>
             {{!-- Email--> aditya.btech.ece.19@nitap.ac.in --}}
-            <a href="/" target="_blank">
-                <i class="fab fa-facebook facebook"></i>
+            <a href="mailto:aditya.btech.ece.19@nitap.ac.in" target="_blank">
+                <i class="fab fa-google facebook"></i>
             </a>
         </div>
     </div><!-- /.col-lg-4 -->
@@ -129,10 +129,10 @@
         </svg> --}}
 
         {{!-- in place of svg we use img tag --}}
-        <img src="/membersProfile/darshita.jpeg" alt="Darshita" class="profile">
+        <img src="/membersProfile/darshu.jpeg" alt="Darshita" class="profile">
 
 
-        <h4 style="font-weight=" bold";">STUDENT COORDINATOR</h4>
+        <h4 style="font-weight="heavy,extra-bold";">STUDENT COORDINATOR</h4>
         <p>Darshita Jhunjhunwala</p>
         <div class="social-icons">
 
@@ -143,8 +143,8 @@
                 <i class="fa fa-linkedin-square linkedIn"></i>
             </a>
             {{!-- EMAIL ---> darshita.btech.ece.19@nitap.ac.in  --}}
-            <a href="/" target="_blank">
-                <i class="fab fa-facebook facebook"></i>
+            <a href="mailto:darshita.btech.ece.19@nitap.ac.in" target="_blank">
+                <i class="fab fa-google facebook"></i>
             </a>
         </div>
     </div><!-- /.col-lg-4 -->
@@ -158,20 +158,20 @@
         </svg> --}}
 
         {{!-- in place of svg we use img tag --}}
-        <img src="/membersProfile/anamika.jpg" alt="Anamika" class="profile">
+        <img src="/membersProfile/anamka.jpeg" alt="Anamika" class="profile">
 
-        <h4 style=" font-weight=" bold";">STUDENT COORDINATOR</h4>
+        <h4 style=" font-weight="heavy,extra-bold";">STUDENT COORDINATOR</h4>
         <p>Anamika</p>
         <div class="social-icons">
 
             <a href="/" target="_blank">
                 <i class="fa fa-instagram instagram"></i>
             </a>
-            <a href="/" target="_blank">
+            <a href="https://www.linkedin.com/in/anamkaa/" target="_blank">
                 <i class="fa fa-linkedin-square linkedIn"></i>
             </a>
-            <a href="/" target="_blank">
-                <i class="fab fa-facebook facebook"></i>
+            <a href="mailto:anamika.btech.ece.19@nitap.ac.in" target="_blank">
+                <i class="fab fa-google facebook"></i>
             </a>
         </div>
     </div><!-- /.col-lg-4 -->
@@ -187,7 +187,7 @@
         {{!-- in place of svg we use img tag --}}
         <img src="/membersProfile/priya.jpeg" alt="Priya" class="profile">
 
-        <h4 style=" font-weight=" bold";">STUDENT COORDINATOR</h4>
+        <h4 style=" font-weight="heavy,extra-bold";">STUDENT COORDINATOR</h4>
         <p>Priya Sinha</p>
         <div class="social-icons">
 
@@ -198,8 +198,8 @@
                 <i class="fa fa-linkedin-square linkedIn"></i>
             </a>
             {{!-- Email--> priya.btech.ece.20@nitap.ac.in --}}
-            <a href="/" target="_blank">
-                <i class="fab fa-facebook facebook"></i>
+            <a href="mailto:priya.btech.ece.20@nitap.ac.in" target="_blank">
+                <i class="fab fa-google facebook"></i>
             </a>
         </div>
     </div><!-- /.col-lg-4 -->
@@ -215,7 +215,7 @@
         {{!-- in place of svg we use img tag --}}
         <img src="/membersProfile/bindhu.jpg" alt="Bindhu" class="profile">
 
-        <h4 style="font-weight=" bold";">STUDENT COORDINATOR</h4>
+        <h4 style="font-weight="heavy,extra-bold";">STUDENT COORDINATOR</h4>
         <p>Lankapalli Bindhu</p>
         <div class="social-icons">
 
@@ -226,8 +226,8 @@
                 <i class="fa fa-linkedin-square linkedIn"></i>
             </a>
             {{!-- Email--> lankapalli.btech.ece.20@nitap.ac.in --}}
-            <a href="/" target="_blank">
-                <i class="fab fa-facebook facebook"></i>
+            <a href="mailto:lankapalli.btech.ece.20@nitap.ac.in" target="_blank">
+                <i class="fab fa-google facebook"></i>
             </a>
         </div>
     </div><!-- /.col-lg-4 -->
@@ -245,7 +245,7 @@
         {{!-- in place of svg we use img tag --}}
         <img src="/membersProfile/kiran.jpeg" alt="Kiran" class="profile">
 
-        <h4 style="font-weight=" bold";">STUDENT COORDINATOR</h4>
+        <h4 style="font-weight="heavy,extra-bold";">STUDENT COORDINATOR</h4>
         <p>Bukya Uday Kiran Rathod</p>
         <div class="social-icons">
 
@@ -256,8 +256,8 @@
                 <i class="fa fa-linkedin-square linkedIn"></i>
             </a>
             {{!-- Email--> udaykiranrathod2003@gmail.com --}}
-            <a href="/" target="_blank">
-                <i class="fab fa-facebook facebook"></i>
+            <a href="mailto:udaykiranrathod2003@gmail.com" target="_blank">
+                <i class="fab fa-google facebook"></i>
             </a>
         </div>
     </div><!-- /.col-lg-4 -->
