--- a/templates/partials/message.hbs
+++ b/templates/partials/message.hbs
@@ -1,7 +1,7 @@
 {{!-- for navigation --}}
 <div id="message" style=" display: block; margin-top: -31px; height: 35px;"></div>
 
-<div class="message" style="margin: 2rem;">
+<div class="message">
     <div class="card respose">
         <div class="card-body">
             <h2 class="card-title" style="font-weight: bold;">Our Vision</h2>
@@ -51,7 +51,7 @@
         </div>
     </div>
     <div class="card respose">
-        <img class="card-img-top" src="/membersProfile/pawan.jpeg" alt="Card image cap">
+        <img class="card-img-top" src="/membersProfile/pawan2.jpeg" alt="Card image cap">
         <div class="card-body">
             <h5 class="card-title" style="font-weight: bold;">Society President's Message</h5>
             <p class="card-text">Dear Students,</p>
