--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-light sticky-top " style="background-color: #A855F7;">
     <a class="navbar-brand" href="/" style="margin-left: 17px;">
-        <img src="images/LogoECESS.png" class="d-inline-block align-top" style="border-radius: 50%;" height="40"
-            width="40" alt="logo">
+        <img src="images/LogoECESS.png" class="d-inline-block align-top" style="border-radius: 50%; margin: -12px 0;"
+            height="70" width="70" alt="logo">
     </a>
 
     <button id="collapseBtn" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
