--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -9,9 +9,9 @@
 
     {{!-- jumbotron is always at top to introduce someone/somethings --}}
     <div class="jumbotron jumbotron-fluid">
-        <div class="row jumbo py-4">
+        <div class="row jumbo py-4" style="margin: -20px;">
             <div class="col-4">
-                <img src="/images/LogoECESS.png" alt="logo">
+                <img src="/images/LogoECESS.png" alt="logo" style="max-width: 200px; max-height: 200px;">
             </div>
             <div class="col-8">
                 <div class="container">
