--- a/templates/partials/events.hbs
+++ b/templates/partials/events.hbs
@@ -2,11 +2,11 @@
 <div id="event" style=" display: block; margin-top: -31px; height: 35px;"></div>
 {{!-- <h1 class="title">Events</h1> --}}
 <div class="event">
-     <h2 style="font-weight: bold; color:var(--text-color);"> EVENTS</h2>
+    <h2 style="font-weight: bold; color:var(--text-color);"> EVENTS</h2>
     <div id="accordion">
         <div class="card">
             {{!-- style="border-left: 25px solid red;" --}}
-            <div class="row" >
+            <div class="row">
                 <div class="col-4 card-header head" style="background-color: var(--secondary);">
                     28-Jun-2021
                 </div>
@@ -15,7 +15,7 @@
                         <h5 class="mb-0">
                             <button class="btn btn-link collapsed head" data-toggle="collapse"
                                 data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                Freshers meet
+                                Fresher's meet
                             </button>
                         </h5>
                     </div>
@@ -23,18 +23,19 @@
             </div>
             <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                 <div class="card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
-                    squid. 3
-                    wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa
-                    nesciunt laborum
-                    eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin
-                    coffee nulla
-                    assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson
-                    cred nesciunt
-                    sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                    farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them
-                    accusamus
-                    labore sustainable VHS.
+                    <h3 style="text-decoration: underline;">@@@---INVITATION---@@@</h3>
+                    <p>
+                        As you were informed by your student coordinators, we (Your 3rd year seniors) will be
+                        conducting a <i><b> fresher’s meet on 28th of June </b></i> on google meet platform from 6pm
+                        onwards.
+                    </p>
+                    <p>
+                        Each one of you is cordially invited to attend the meeting.
+                        All of you are requested to join the session only with your respective names.
+                        Hoping you all will behave with utmost discipline and maintain the decorum.
+                    </p>
+
+                    </ul>
                 </div>
             </div>
         </div>
@@ -56,31 +57,9 @@
             </div>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <div class="card-body">
-                    comming soon.............
+                    Updates soon.............
                 </div>
 
-            </div>
-            <div class="card">
-                <div class="row">
-                    <div class="col-4 card-header head" style="background-color: var(--secondary);">
-                        dd-mm-yyyy
-                    </div>
-                    <div class="col-8" style="padding-right: 5px; padding-left: 5px; background-color: var(--primary);">
-                        <div class="card-header" id="headingThree">
-                            <h5 class="mb-0">
-                                <button class="btn btn-link collapsed head" data-toggle="collapse"
-                                    data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    Upcoming events
-                                </button>
-                            </h5>
-                        </div>
-                    </div>
-                </div>
-                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                    <div class="card-body">
-                        comming soon.............
-                    </div>
-                </div>
             </div>
         </div>
     </div>
