--- a/templates/partials/gallery.hbs
+++ b/templates/partials/gallery.hbs
@@ -2,7 +2,7 @@
 <div id="gallery" style=" display: block; margin-top: -31px; height: 23px;"></div>
 
 <a href="/gallery">
-  <div id="carouselExampleIndicators" class="carousel slide py-10 mb-5" data-bs-ride="carousel" style="margin: 3rem;">
+  <div id="carouselExampleIndicators" class="carousel slide py-10 mb-5" data-bs-ride="carousel">
     <h2 style="font-weight: bold; color:var(--text-color);"> GALLERY</h2>
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -17,17 +17,17 @@
         <div class="d-flex justify-content-evenly flex-wrap">
 
           <div class="card" style="width: 20rem;">
-            <img src="https://source.unsplash.com/1600x900/?mobile" class="card-img-top" alt="...">
+            <img src="/images/NIT-AP.jpg" class="card-img-top" alt="...">
 
           </div>
 
           <div class="card" style="width: 20rem;">
-            <img src="https://source.unsplash.com/1600x900/?campus" class="card-img-top" alt="...">
+            <img src="/images/NIT-JOTE.jpg" class="card-img-top" alt="...">
 
           </div>
 
           <div class="card" style="width: 20rem;">
-            <img src="https://source.unsplash.com/1600x900/?car" class="card-img-top" alt="...">
+            <img src="/images/collegeimage.jpg" class="card-img-top" alt="...">
 
           </div>
         </div>
@@ -38,17 +38,17 @@
         <div class="d-flex justify-content-evenly flex-wrap">
 
           <div class="card" style="width: 20rem;">
-            <img src="https://source.unsplash.com/1600x900/?fire" class="card-img-top" alt="...">
+            <img src="/images/c1.jpeg" class="card-img-top" alt="...">
 
           </div>
 
           <div class="card" style="width: 20rem;">
-            <img src="https://source.unsplash.com/1600x900/?computer" class="card-img-top" alt="...">
+            <img src="/images/c2.jpeg" class="card-img-top" alt="...">
 
           </div>
 
           <div class="card" style="width: 20rem;">
-            <img src="https://source.unsplash.com/1600x900/?book" class="card-img-top" alt="...">
+            <img src="/images/c3.jpeg" class="card-img-top" alt="...">
 
           </div>
         </div>
@@ -61,17 +61,17 @@
         <div class="d-flex justify-content-evenly flex-wrap">
 
           <div class="card" style="width: 20rem;">
-            <img src="https://source.unsplash.com/1600x900/?camera" class="card-img-top" alt="...">
+            <img src="/images/c4.jpeg" class="card-img-top" alt="...">
 
           </div>
 
           <div class="card" style="width: 20rem;">
-            <img src="https://source.unsplash.com/1600x900/?pen" class="card-img-top" alt="...">
+            <img src="/images/c3.jpeg" class="card-img-top" alt="...">
 
           </div>
 
           <div class="card" style="width: 20rem;">
-            <img src="https://source.unsplash.com/1600x900/?block" class="card-img-top" alt="...">
+            <img src="/images/c2.jpeg" class="card-img-top" alt="...">
 
           </div>
         </div>
