--- a/templates/partials/members.hbs
+++ b/templates/partials/members.hbs
@@ -26,7 +26,7 @@
             </a>
             {{!-- Email -- pavandharimireddy.999@gmail.com --}}
             <a href="mailto:pavandharimireddy.999@gmail.com" target="_blank">
-                <i class= "fa fa-google facebook"></i>
+                <i class='far fa-envelope facebook'></i>
             </a>
         </div>
     </div><!-- /.col-lg-4 -->
@@ -57,7 +57,7 @@
 
             {{!-- EMAIL : bhavanamachyuthreddy@gmail.com --}}
             <a href="mailto:bhavanamachyuthreddy@gmail.com" target="_blank">
-                <i class="fab fa-google facebook"></i>
+                <i class='far fa-envelope facebook'></i>
             </a>
         </div>
     </div><!-- /.col-lg-4 -->
@@ -86,7 +86,7 @@
             </a>
             {{!-- Email---->shashankchauhan12345@gmail.com --}}
             <a href="mailto:shashankchauhan12345@gmail.com" target="_blank">
-                <i class="fab fa-google facebook"></i>
+                <i class='far fa-envelope facebook'></i>
             </a>
         </div>
     </div><!-- /.col-lg-4 -->
@@ -115,7 +115,7 @@
             </a>
             {{!-- Email--> aditya.btech.ece.19@nitap.ac.in --}}
             <a href="mailto:aditya.btech.ece.19@nitap.ac.in" target="_blank">
-                <i class="fab fa-google facebook"></i>
+                <i class='far fa-envelope facebook'></i>
             </a>
         </div>
     </div><!-- /.col-lg-4 -->
@@ -144,7 +144,7 @@
             </a>
             {{!-- EMAIL ---> darshita.btech.ece.19@nitap.ac.in  --}}
             <a href="mailto:darshita.btech.ece.19@nitap.ac.in" target="_blank">
-                <i class="fab fa-google facebook"></i>
+                <i class='far fa-envelope facebook'></i>
             </a>
         </div>
     </div><!-- /.col-lg-4 -->
@@ -171,7 +171,7 @@
                 <i class="fa fa-linkedin-square linkedIn"></i>
             </a>
             <a href="mailto:anamika.btech.ece.19@nitap.ac.in" target="_blank">
-                <i class="fab fa-google facebook"></i>
+                <i class='far fa-envelope facebook'></i>
             </a>
         </div>
     </div><!-- /.col-lg-4 -->
@@ -199,7 +199,7 @@
             </a>
             {{!-- Email--> priya.btech.ece.20@nitap.ac.in --}}
             <a href="mailto:priya.btech.ece.20@nitap.ac.in" target="_blank">
-                <i class="fab fa-google facebook"></i>
+                <i class='far fa-envelope facebook'></i>
             </a>
         </div>
     </div><!-- /.col-lg-4 -->
@@ -227,7 +227,7 @@
             </a>
             {{!-- Email--> lankapalli.btech.ece.20@nitap.ac.in --}}
             <a href="mailto:lankapalli.btech.ece.20@nitap.ac.in" target="_blank">
-                <i class="fab fa-google facebook"></i>
+                <i class='far fa-envelope facebook'></i>
             </a>
         </div>
     </div><!-- /.col-lg-4 -->
@@ -257,7 +257,7 @@
             </a>
             {{!-- Email--> udaykiranrathod2003@gmail.com --}}
             <a href="mailto:udaykiranrathod2003@gmail.com" target="_blank">
-                <i class="fab fa-google facebook"></i>
+                <i class='far fa-envelope facebook'></i>
             </a>
         </div>
     </div><!-- /.col-lg-4 -->
